# rust-project

./: Cargo.toml
core/: Cargo.toml
core/src/: company.rs  db.rs  lib.rs  traits.rs
rocket-api/: Cargo.toml  Rocket.toml
rocket-api/src/: apiresponse.rs  main.rs
rocket-api/src/api/: company.rs  mod.rs
